7376
Error with Scala version 2.10.0-M2-0152-g5dca64cefe-2012-03-13:
```scala
<console>:12: error: no type parameters for method apply: (f: Int => Result[A])Apply[A] in object Apply exist so that it can be applied to arguments (Int => Success[_ >: Some[Int] with None.type <: Option[Int]])
 --- because ---
argument expression's type is not compatible with formal parameter type;
 found   : Int => Success[_ >: Some[Int] with None.type <: Option[Int]]
 required: Int => Result[?A]
       def goo : Apply[Option[Int]] = Apply { i =>
                                      ^
<console>:12: error: type mismatch;
 found   : Int => Success[_ >: Some[Int] with None.type <: Option[Int]]
 required: Int => Result[A]
       def goo : Apply[Option[Int]] = Apply { i =>
                                                ^
<console>:12: error: type mismatch;
 found   : Apply[A]
 required: Apply[Option[Int]]
       def goo : Apply[Option[Int]] = Apply { i =>
                                            ^
```
